--- a/gui/ui_files/calendar_window.ui
+++ b/gui/ui_files/calendar_window.ui
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>CalendarWindow</class>
+ <widget class="QDialog" name="CalendarWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>393</width>
-    <height>293</height>
+    <height>294</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -45,7 +45,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>CalendarWindow</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -61,7 +61,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>CalendarWindow</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
