--- a/gui/ui_files/select_data_window.ui
+++ b/gui/ui_files/select_data_window.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>SelectDataWindow</class>
+ <widget class="QDialog" name="SelectDataWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -105,7 +105,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>SelectDataWindow</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -121,7 +121,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>SelectDataWindow</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
