--- a/gui/ui_files/main_window.ui
+++ b/gui/ui_files/main_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>513</width>
-    <height>405</height>
+    <width>511</width>
+    <height>397</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -49,36 +49,8 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>20</y>
-       <width>241</width>
-       <height>26</height>
-      </rect>
-     </property>
-     <layout class="QGridLayout" name="gridLayout" columnstretch="0,3">
-      <item row="0" column="0">
-       <widget class="QLabel" name="label_2">
-        <property name="font">
-         <font>
-          <pointsize>10</pointsize>
-          <bold>false</bold>
-         </font>
-        </property>
-        <property name="text">
-         <string>Project:</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QComboBox" name="comboBox_db_projects"/>
-      </item>
-     </layout>
-    </widget>
-    <widget class="QWidget" name="layoutWidget">
-     <property name="geometry">
-      <rect>
-       <x>10</x>
        <y>60</y>
-       <width>239</width>
+       <width>241</width>
        <height>26</height>
       </rect>
      </property>
@@ -106,6 +78,34 @@
       </item>
      </layout>
     </widget>
+    <widget class="QWidget" name="">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>20</y>
+       <width>241</width>
+       <height>24</height>
+      </rect>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0,1">
+      <item>
+       <widget class="QLabel" name="label_2">
+        <property name="font">
+         <font>
+          <pointsize>10</pointsize>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>Project:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QComboBox" name="comboBox_db_projects"/>
+      </item>
+     </layout>
+    </widget>
    </widget>
    <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
@@ -119,7 +119,7 @@
     <property name="title">
      <string>Sessions</string>
     </property>
-    <widget class="QTableWidget" name="tableWidget">
+    <widget class="QTableWidget" name="tableWidget_sessions">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -153,52 +153,13 @@
      </property>
     </widget>
    </widget>
-   <widget class="QPushButton" name="button_report">
-    <property name="geometry">
-     <rect>
-      <x>240</x>
-      <y>460</y>
-      <width>131</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Report</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="button_sessions">
-    <property name="geometry">
-     <rect>
-      <x>60</x>
-      <y>460</y>
-      <width>151</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Sessions</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="button_status">
-    <property name="geometry">
-     <rect>
-      <x>400</x>
-      <y>460</y>
-      <width>95</width>
-      <height>24</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Status</string>
-    </property>
-   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>513</width>
+     <width>511</width>
      <height>22</height>
     </rect>
    </property>
