--- a/gui/ui_files/select_log_window.ui
+++ b/gui/ui_files/select_log_window.ui
@@ -52,12 +52,12 @@
     <string>Project:</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>320</x>
+     <x>328</x>
      <y>270</y>
-     <width>161</width>
+     <width>151</width>
      <height>26</height>
     </rect>
    </property>
